changed cropper rectangle to comply to FS, instead the resize handlers because the lib can not work with them ( fixes #994 )

--- a/web/cropper/cropper.css
+++ b/web/cropper/cropper.css
@@ -18,9 +18,6 @@
 }
 
 .imgCrop_overlay {
-	background-color: #000;
-	opacity: 0.5;
-	filter:alpha(opacity=50);
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -52,7 +49,7 @@
 	position: absolute;
 	width: 100%;
 	height: 1px;
-	background: transparent url(marqueeHoriz.gif) repeat-x 0 0;
+	background: transparent url(marqueeHoriz.png) repeat-x 0 0;
 	z-index: 3;
 }
 
@@ -60,7 +57,7 @@
 	position: absolute;
 	height: 100%;
 	width: 1px;
-	background: transparent url(marqueeVert.gif) repeat-y 0 0;
+	background: transparent url(marqueeVert.png) repeat-y 0 0;
 	z-index: 3;
 }
 
@@ -89,10 +86,9 @@
 
 .imgCrop_handle {
 	position: absolute;
-	border: 1px solid #333;
 	width: 6px;
 	height: 6px;
-	background: #FFF;
+	background: red;
 	opacity: 0.5;
 	filter:alpha(opacity=50);
 	z-index: 4;
